# ocp-diag-core-python

./: .gitignore  CODE_OF_CONDUCT.md  DEVELOPER_NOTES.md  MANIFEST.in  README.md  TODO.md  developer_notes.md  pyproject.toml  requirements.txt
.github/: codecov.yaml
.github/workflows/: coverage.yaml  publish.yaml  tests.yaml
.scripts/: gendoc.sh
docs/: index.md  output.config.md  output.dut.md  output.md  output.measurement.md  output.objects.md  output.run.md  output.source.md  output.step.md
docs/src/: conf.py  index.rst  output.config.rst  output.dut.rst  output.measurement.rst  output.objects.rst  output.rst  output.run.rst  output.source.rst  output.step.rst
examples/: __init__.py  __main__.py  advanced.py  config.py  demo.py  extension.py  external.py  measurements.py  sample_output.txt  simple.py
ocptv/: __init__.py  api.py  dut.py  formatter.py
ocptv/output/: __init__.py  config.py  dut.py  emit.py  measurement.py  objects.py  run.py  runtime_checks.py  source.py  step.py
scripts/: check.sh
src/ocptv/: __init__.py  formatter.py
src/ocptv/output/: config.py  emit.py  objects.py  run.py  step.py
tests/: mocks.py  test_formatter.py  test_run.py  test_schema_version.py
tests/output/: checks.py  conftest.py  test_config.py  test_emit.py  test_run.py  test_runtime_checks.py  test_schema_version.py  test_source.py  test_step.py
