[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocptv"
version = "0.1.6"
description = "OCP Test & Validation project api"
readme = "README.md"
authors = [{ name = "OCP Test & Validation", email = "ocp-test-validation@OCP-All.groups.io" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Hardware",
]
keywords = ["ocp", "ocptv", "specification"]
dependencies = []
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "pytest-cov", "mypy"]

[project.urls]
"Homepage" = "https://github.com/opencomputeproject/ocp-diag-python"
"Bug reports" = "https://github.com/opencomputeproject/ocp-diag-python/issues"
"Source" = "https://github.com/opencomputeproject/ocp-diag-python"

[tool.bumpver]
current_version = "0.1.6"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/ocptv/__init__.py" = [
    "{version}"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=ocptv --cov-report term-missing tests/"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.poetry]
name = "ocptv"
version = "0.1.6"
description = "OCP Test & Validation project api"
authors = ["OCP Test & Validation <ocp-test-validation@OCP-All.groups.io>"]
